# vacancy_hh

./: .gitignore  README.md  config.py  main.py  pyproject.toml
src/: connector.py  create_database.py  db_manager.py  user_interface.py  vacancy.py  work_API.py  work_vac.py
tests/: test_vacancy.py
utils/: converter.py  for_employers.py  for_vacancies.py  interface.py
