[tool.poetry]
name = "work-to-hh"
version = "0.1.0"
description = ""
authors = ["KirSouL <Sokil-Ki-So@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dependence.dependencies]
requests = "^2.32.3"
pytest = "^8.2.2"
prettytable = "^3.10.2"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"